@@ -32,6 +32,7 @@ The following bugs were resolved with this release:
   [32981] ports: elf/tst-execstack-prog-static-tunable fails on
     sparc64-linux-gnu
   [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
+  [33164] iconv -o should not create executable files
   [33185] Fix double-free after allocation failure in regcomp
 
 Version 2.41
